[feat] add stopping, rotating controls, [ui] add buttons

--- a/test-app/index.html
+++ b/test-app/index.html
@@ -9,7 +9,14 @@
   <body>
 
     <section class="container">
-      <button onclick="sendToServer()">Send</button>
+      <button id="left">←</button>
+      <button id="up">↑</button>
+      <button id="right">→</button>
+      <button id="down">↓</button>
+      <button id="cl">↻</button>
+      <button id="ccl">↺</button>
+      <button id="stop">⨯</button>
+
     </section>
 
     <script src="lib/jquery.min.js"></script>
